# parking-lot-counter-cpp

./: .gitignore  CMakeLists.txt  README.md  setup.sh
application/src/: main.cpp
cmake/: FindDemoOpenVINO.cmake  osdetect.cmake  pahomqtt.cmake
resources/: config.json
src/: main.cpp  mqtt.cpp  mqtt.h
